--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: Missy's Day Off
-Theme URI: https://lanternstrategic.com/wordpress
-Description: This is a custom theme for the travel blog, Missy's Day Off.
+Theme Name: Sarpy Disaster Recovery
+Theme URI: https://github.com/ZacharyN/sarpy-co-ltrg
+Description: This is a WordPress theme for the Sarpy Disaster Recovery Group. It is built on the Genesis Framework.
 Author: Zachary Nelson
 Author URI: https://zacharynelson.me
 
