Adding IDE config files and updates to typography

--- a/_config.scss
+++ b/_config.scss
@@ -14,8 +14,13 @@ html { font-size: 16px }
 $primary-color    : #71BAC0; // Royal Blue
 $secondary-color  : #6D6E70; // Gold
 
+$accent-purple    : #7F93CA; // Light Purple
+$accent-orange    : #FFB472; // Light Orange
+$accent-yellow    : #FFDD95; // Light Yellow
+
 $font-primary     : #101010; // Dark Grey
 $font-inverse     : $font-primary; // White
+$link-primary     : $accent-orange;
 
 $background-light : #FFFFFF; // White
 $background-dark  : $primary-color; // Primary Color from line 14
@@ -24,18 +29,6 @@ $link-hover-light : $primary-color;
 $link-hover-dark  : #FFFFFF;
 
 $primary-inverse  : #FFFFFF; // White
-
-$accent-purple    : #7F93CA; // Light Purple
-$accent-orange    : #FFB472; // Light Orange
-$accent-yellow    : #FFDD95; // Light Yellow
-
-
-//  + ------------------------------------------------------------------ +
-//  + Configuring Responsive Breakpoints                                 +
-//  + ------------------------------------------------------------------ +
-
-
-
 
 //  + ------------------------------------------------------------------ +
 //  + Making Z-index pain-free                                           +
