--- a/_typography.scss
+++ b/_typography.scss
@@ -1,12 +1,16 @@
-
-
-
-
-/* ------------------------------------------------------------------
-## Paragraph Styles
------------------------------------------------------------------- */
+//  + ------------------------------------------------------------------ +
+//  + Paragraph Styles                                                   +
+//  + ------------------------------------------------------------------ +
 p {
-  font-family: Raleway, Helvetica, Arial, sans-serif;
-  font-size: 1.15rem;
-  font-weight: 400;
+  font-family: $paragraph-font;
+  color: $font-primary;
+  font-size: 1rem;
+}
+
+//  + ------------------------------------------------------------------ +
+//  + Link Styles                                                        +
+//  + ------------------------------------------------------------------ +
+
+a {
+  color: $link-primary;
 }
