--- a/_nav.scss
+++ b/_nav.scss
@@ -2,6 +2,12 @@
   @include nav-background-selector;
 }
 
+.genesis-nav-menu a {
+  font-size: 1.25rem;
+  font-weight: 700;
+  letter-spacing: 0.75px;
+}
+
 .nav-primary .sub-menu a {
   @include nav-background-selector;
   color: $font-primary;
