--- a/custom.css
+++ b/custom.css
@@ -28,8 +28,11 @@ html {
 
 p {
   font-family: "Open Sans", sans-serif;
-  font-size: 1.15rem;
-  font-weight: 400; }
+  color: #101010;
+  font-size: 1rem; }
+
+a {
+  color: #FFB472; }
 
 /* ------------------------------------------------------------------
 ## Images
