--- a/_config.scss
+++ b/_config.scss
@@ -20,7 +20,7 @@ $accent-yellow    : #FFDD95; // Light Yellow
 
 $font-primary     : #101010; // Dark Grey
 $font-inverse     : $font-primary; // White
-$link-primary     : $accent-orange;
+$link-primary     : $accent-purple;
 
 $background-light : #FFFFFF; // White
 $background-dark  : $primary-color; // Primary Color from line 14
