--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,4 +1,3 @@
-
 //  + ------------------------------------------------------------------ +
 //  + Font Headings Mixin                                                +
 //  + ------------------------------------------------------------------ +
@@ -29,6 +28,14 @@
 
 @mixin nav-background-selector {
   @include dark-background;
+}
+
+//  + ------------------------------------------------------------------ +
+//  + Regular Links                                                      +
+//  + ------------------------------------------------------------------ +
+@mixin regular-links {
+  color: $font-primary;
+  text-decoration: none;
 }
 
 //  + ------------------------------------------------------------------ +
